--- a/Thesis/res/values/strings.xml
+++ b/Thesis/res/values/strings.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Thesis</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Mathemagic</string>
     <string name="action_settings">Settings</string>
-
+    <string name="menu_take_photo">Take Photo</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_ocr">OCR</string>
+    <string name="start_button">Tap anywhere to start</string>
+	<string name="help_button">Help</string>
 </resources>
